# xb

./: pyproject.toml
.zed/: tasks.json
sample_files/: hello.xb  if.xb
src/xb/: __init__.py  repl.py  run.py  xb.lark
src/xb/grammar/: __init__.py  syntax_errors.py  transformer.py  xb.lark
src/xb/interpreter/: ast.py  environment.py  errors.py  value.py
tests/xb/interpreter/: test_environment.py  test_value.py
